--- a/src/Containers/Layout/Header/Header.module.sass
+++ b/src/Containers/Layout/Header/Header.module.sass
@@ -1,11 +1,16 @@
 .HeaderContainer 
     display: flex
-    height: 60px
+    height: 35px
     padding: 5px
     border-bottom: 1px solid #ccc
 
     h4
         margin-left: auto
+        align-self: flex-end
+        color: #A9A9A9
+
+        span 
+            color: #ccc
 
 
     
