--- a/src/Containers/Layout/SelectColumns/SelectColumns.module.sass
+++ b/src/Containers/Layout/SelectColumns/SelectColumns.module.sass
@@ -1,2 +1,32 @@
-.CheckboxGroup 
-    padding: 5px 5px 5px 10px
+.SelectColumnsContainer
+    width: 100%
+    // background: #fafafa
+    // padding: 1px
+    // -webkit-box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+    // -moz-box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+    // box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+
+    .Header
+        text-align: center
+        font-size: 1.2rem
+        font-weight: bold
+
+    .CheckBoxGroupContainer 
+        display: flex
+        margin-top: 10px
+
+        div
+            box-sizing: border-box
+            width: 100%
+
+            .SectionHeader
+                font-size: 1.1rem
+                font-weight: bold
+                text-align: center
+
+            .CheckboxGroup
+                padding-left: 10px
+
+        .ToggleColumnsContainer
+            border-right: 1px solid #ccc
+            
