--- a/src/Containers/Layout/SelectWorksheet/SelectWorksheet.module.sass
+++ b/src/Containers/Layout/SelectWorksheet/SelectWorksheet.module.sass
@@ -1,3 +1,15 @@
-.Option
-    Icon
-        float: right
+.SelectWorksheetContainer
+    // background: #fafafa
+    // padding: 1px
+    // -webkit-box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+    // -moz-box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+    // box-shadow: 6px 6px 20px -1px rgba(211,211,211,1)
+    .SelectContainer
+        display: flex
+
+        div:first-child
+            flex: 1 1 auto
+            padding: 0 3px 0 3px
+
+        div:last-child
+            flex: 0 0 auto
